--- a/react-web-app/package.json
+++ b/react-web-app/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sanity/client": "^6.22.5",
+    "@sanity/image-url": "^1.0.2",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
