--- a/sanity-studio/package.json
+++ b/sanity-studio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "addingcomponents",
+  "name": "glad-agency-studio",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -23,11 +23,17 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@sanity/cli": "^3.0.0",
     "@sanity/eslint-config-studio": "^4.0.0",
     "@types/react": "^18.0.25",
-    "eslint": "^8.6.0",
-    "prettier": "^3.0.2",
-    "typescript": "^5.1.6"
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   },
   "prettier": {
     "semi": false,
