--- a/sanity-studio/vercel.json
+++ b/sanity-studio/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "build.sh",
+      "src": "package.json",
       "use": "@vercel/static-build"
     }
   ],
