--- a/react-web-app/package.json
+++ b/react-web-app/package.json
@@ -48,5 +48,8 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.11"
+  },
+  "env": {
+    "NEXT_PUBLIC_SANITY_TOKEN": "${SANITY_TOKEN}"
   }
 }
